--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ section {
 }
 
 .banner img {
-    max-width: 100%;
+    width: 100%;
+    height: 550px;
 }
 
 #project-description a {
@@ -199,4 +200,3 @@ section {
     height: 100%;
     border: none;
 }
-
